--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.3.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^5.13.15",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
